fixing small stuff

--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -140,9 +140,8 @@ jobs:
         run: |
           rm -f ${HOME}/.docker/config.json
 
-
   docker-debug:
-    name: Debug
+    name: Docker Debug
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
