update outdated npm packages

--- a/ui/package.json
+++ b/ui/package.json
@@ -15,37 +15,37 @@
         "cookie-universal": "^2.0.16"
     },
     "devDependencies": {
-        "@babel/cli": "^7.6.2",
-        "@babel/core": "^7.6.2",
-        "@babel/preset-env": "^7.6.2",
+        "@babel/cli": "^7.11.6",
+        "@babel/core": "^7.11.6",
+        "@babel/preset-env": "^7.11.5",
         "@material/typography": "^3.1.0",
-        "@smui/button": "^1.0.0-beta.16",
-        "@smui/dialog": "^1.0.0-beta.16",
-        "@smui/fab": "^1.0.0-beta.16",
-        "@smui/icon-button": "^1.0.0-beta.16",
-        "@smui/paper": "^1.0.0-beta.16",
-        "@smui/textfield": "^1.0.0-beta.16",
-        "@smui/top-app-bar": "^1.0.0-beta.16",
+        "@smui/button": "^1.0.0",
+        "@smui/dialog": "^1.0.0",
+        "@smui/fab": "^1.0.0",
+        "@smui/icon-button": "^1.0.0",
+        "@smui/paper": "^1.0.0",
+        "@smui/textfield": "^1.0.0",
+        "@smui/top-app-bar": "^1.0.0",
         "babel-jest": "^24.9.0",
-        "babel-loader": "^8.0.6",
+        "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
-        "cross-env": "^6.0.0",
-        "css-loader": "^3.2.0",
+        "cross-env": "^6.0.3",
+        "css-loader": "^3.6.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.0.5",
+        "husky": "^3.1.0",
         "jest": "^24.9.0",
-        "lint-staged": "^9.3.0",
-        "mini-css-extract-plugin": "^0.8.0",
-        "node-sass": "^4.14.0",
-        "prettier": "^1.18.2",
-        "sass-loader": "^8.0.0",
-        "style-loader": "^1.0.0",
-        "svelte": "^3.9.1",
+        "lint-staged": "^9.5.0",
+        "mini-css-extract-plugin": "^0.8.2",
+        "node-sass": "^4.14.1",
+        "prettier": "^1.19.1",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.2.1",
+        "svelte": "^3.25.0",
         "svelte-loader": "^2.13.6",
         "svelte-routing": "1.4.0",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.8.1"
+        "webpack": "^4.44.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     },
     "husky": {
         "hooks": {
