troubleshooting what looks like PATH issue

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -69,6 +69,11 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v2
 
+    - name: Checking PATHs
+      run: |
+        echo $PATH
+        echo $GOPATH
+
     - name: Build binary
       run: make build
 
