--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -69,10 +69,10 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v2
 
-    - name: Checking PATHs
-      run: |
-        echo $PATH
-        echo $GOPATH
+    - name: Checking PATH
+      run: echo $PATH
+    - name: Checking GOPATH
+      run: echo $GOPATH
 
     - name: Build binary
       run: make build
