--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -67,13 +67,13 @@ jobs:
         node-verison: '12.x'
 
     - name: Setup Go
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v2.1.2
 
     - name: Checking env
       run: go env
 
-    - name: Build binary
-      run: PATH=$PATH:$GOPATH/bin make build
+    - name: Build wg-ui
+      run: make build
 
     - name: Check binary
       run: file bin/wireguard-ui
