--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -62,9 +62,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup NodeJS
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-verison: '12.x'
+        node-verison: 12
+        check-latest: true
 
     - name: Setup Go
       uses: actions/setup-go@v2.1.2
