--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - v*
 
@@ -13,50 +13,31 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-20.04
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      -
-        name: Prepare
-        id: prepare
-        run: |
-          DOCKER_IMAGE=embarkstudios/wireguard-ui
-          DOCKER_PLATFORMS=linux/amd64,linux/arm64,linux/arm/v7
-          VERSION=${GITHUB_REF#refs/tags/v}
 
-          TAGS="--tag ${DOCKER_IMAGE}:${VERSION}"
-          echo ::set-output name=docker_image::${DOCKER_IMAGE}
-          echo ::set-output name=version::${VERSION}
-          echo ::set-output name=buildx_args::--platform ${DOCKER_PLATFORMS} \
-            --build-arg VERSION=${VERSION} \
-            ${TAGS} --file Dockerfile .
-      -
-        name: Set up Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@master
-      -
-        name: Docker Buildx (build)
-        run: |
-          docker buildx build --output "type=image,push=false" ${{ steps.prepare.outputs.buildx_args }}
-      -
-        name: Docker Login
-        if: success()
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo "${DOCKER_PASSWORD}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
-      -
-        name: Docker Buildx (push)
-        if: success()
-        run: |
-          docker buildx build --output "type=image,push=true" ${{ steps.prepare.outputs.buildx_args }}
-      -
-        name: Docker Check Manifest
-        if: always()
-        run: |
-          docker run --rm mplatform/mquery ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}
-      -
-        name: Clear
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: embarkstudios/wireguard-ui:${GITHUB_REF#refs/tags/v}
+
+      - name: Clear
         if: always()
         run: |
           rm -f ${HOME}/.docker/config.json
@@ -69,9 +50,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup NodeJS
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-verison: '12.x'
+        node-verison: 12
 
     - name: npm install & build
       run: |
@@ -79,8 +60,6 @@ jobs:
     
     - name: Setup Go
       uses: actions/setup-go@v2
-      with:
-        go-version: '1.14'
 
     - name: Insert assets into go
       run: |
