--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,12 +1,11 @@
 FROM embarkstudios/wireguard-ui AS latest
 
-FROM ubuntu
+FROM ubuntu:20.04
 RUN apt-get update -y && \
     apt-get install -y software-properties-common iptables curl iproute2 ifupdown iputils-ping && \
     echo resolvconf resolvconf/linkify-resolvconf boolean false | debconf-set-selections && \
     echo "REPORT_ABSENT_SYMLINK=no" >> /etc/default/resolvconf && \
-    add-apt-repository --yes ppa:wireguard/wireguard && \
     apt-get install resolvconf
-RUN apt-get install -qy --no-install-recommends wireguard-tools
+RUN apt-get install -qy --no-install-recommends wireguard
 COPY --from=latest /wireguard-ui /
 ENTRYPOINT [ "/wireguard-ui" ]
