--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -41,7 +41,7 @@ jobs:
     - name: Check suspicious constructs (1)
       uses: "cedrickring/golang-action@1.6.0"
       with:
-        args: go get -u honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all,-ST1003,-U1000,-ST1005 ./... # have to disable ST1003,U1000,ST1005 due to the generated code
+        args: go get -u honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all,-ST1003,-U1000,-ST1005,-SA9002 ./... # have to disable ST1003,U1000,ST1005 due to the generated code
 
     - name: Check suspicious constructs (2)
       uses: "cedrickring/golang-action@1.6.0"
