--- a/.github/workflows/push_master.yaml
+++ b/.github/workflows/push_master.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   docker-build:
     name: Docker Main
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -46,7 +46,7 @@ jobs:
 
   docker-userspace:
     name: Docker UserSpace
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: docker-build
     steps:
       - name: Checkout
@@ -85,7 +85,7 @@ jobs:
 
   docker-debug:
     name: Docker Debug
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [docker-build, docker-userspace]
     steps:
       - name: Checkout
