--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -68,6 +68,8 @@ jobs:
 
     - name: Setup Go
       uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
 
     - name: Build binary
       run: |
