--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -23,11 +23,6 @@ jobs:
         npm install --prefix ui
         npm run --prefix ui build
 
-    - name: Get and install bindfs
-      uses: "cedrickring/golang-action@1.7.0"
-      with:
-        args: go get -u github.com/go-bindata/go-bindata/... && go get -u github.com/elazarl/go-bindata-assetfs/... && go-bindata-assetfs -prefix ui/dist ui/dist
-
     - name: Check styling error
       uses: "cedrickring/golang-action@1.7.0"
       with:
@@ -51,8 +46,7 @@ jobs:
     - name: Check security issues with gosec
       uses: "cedrickring/golang-action@1.7.0"
       with:
-        # TODO: remove `-exclude=G110` once https://github.com/go-bindata/go-bindata/pull/50 is merged and released
-        args: go get -u github.com/securego/gosec/cmd/gosec; gosec -exclude=G110 ./... # https://github.com/securego/gosec
+        args: go get -u github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
 
   build:
     name: Build wg-ui
