--- a/ui/package.json
+++ b/ui/package.json
@@ -22,8 +22,10 @@
         "@smui/button": "^1.0.0",
         "@smui/dialog": "^1.0.0",
         "@smui/fab": "^1.0.0",
+        "@smui/form-field": "^1.0.0",
         "@smui/icon-button": "^1.0.0",
         "@smui/paper": "^1.0.0",
+        "@smui/switch": "^1.0.0",
         "@smui/textfield": "^1.0.0",
         "@smui/top-app-bar": "^1.0.0",
         "babel-jest": "^24.9.0",
