--- a/docker-compose.userspace.yml
+++ b/docker-compose.userspace.yml
@@ -2,8 +2,8 @@ version: "3.7"
 
 services:
   app:
-    image: embarkstudios/wireguard-ui:latest
-    entrypoint: "/wireguard-ui"
+    image: embarkstudios/wireguard-ui:userspace
+    entrypoint: "/wg-go-ui"
     privileged: true
     network_mode: "host"
     volumes:
@@ -17,6 +17,6 @@ services:
      # - WIREGUARD_UI_WG_DNS=192.168.10.0
       - WIREGUARD_UI_NAT=true
       - WIREGUARD_UI_NAT_DEVICE=eth0
-     # - WIREGUARD_UI_WG_DEVICE_NAME=wg0
+     # - WIREGUARD_UI_WG_DEVICE_NAME=wg1
 
     restart: always
