--- a/docker-compose.userspace.yml
+++ b/docker-compose.userspace.yml
@@ -2,8 +2,7 @@ version: "3.7"
 
 services:
   app:
-    image: embarkstudios/wireguard-ui:latest
-    entrypoint: "/wireguard-ui"
+    image: embarkstudios/wireguard-ui:userspace
     privileged: true
     network_mode: "host"
     volumes:
@@ -13,10 +12,10 @@ services:
       - WIREGUARD_UI_LOG_LEVEL=debug
       - WIREGUARD_UI_DATA_DIR=/data
       - WIREGUARD_UI_WG_ENDPOINT=your-andpoint-address:51820
-      - WIREGUARD_UI_CLIENT_IP_RANGE=192.168.10.0/24
-     # - WIREGUARD_UI_WG_DNS=192.168.10.0
+      - WIREGUARD_UI_CLIENT_IP_RANGE=192.168.10.1/24
+     # - WIREGUARD_UI_WG_DNS=192.168.10.1
       - WIREGUARD_UI_NAT=true
       - WIREGUARD_UI_NAT_DEVICE=eth0
-     # - WIREGUARD_UI_WG_DEVICE_NAME=wg0
+     # - WIREGUARD_UI_WG_DEVICE_NAME=wg1
 
     restart: always
