Fixing broken CI

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches:
       - main
-      
+
 jobs:
   review:
     name: Code Review
@@ -26,17 +26,17 @@ jobs:
     - name: Check styling error
       uses: "cedrickring/golang-action@1.7.0"
       with:
-        args: go get -u golang.org/x/lint/golint; golint -set_exit_status main.go server.go config.go
+        args: go install golang.org/x/lint/golint; golint -set_exit_status main.go server.go config.go
 
     - name: Check missing error check
       uses: "cedrickring/golang-action@1.7.0"
       with:
-        args: go get -u github.com/kisielk/errcheck; errcheck ./...
+        args: go install github.com/kisielk/errcheck; errcheck ./...
 
     - name: Check suspicious constructs (1)
       uses: "cedrickring/golang-action@1.7.0"
       with:
-        args: go get -u honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all,-ST1003,-U1000,-ST1005,-SA9002 ./... # have to disable ST1003,U1000,ST1005 due to the generated code
+        args: go install honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all,-ST1003,-U1000,-ST1005,-SA9002 ./... # have to disable ST1003,U1000,ST1005 due to the generated code
 
     - name: Check suspicious constructs (2)
       uses: "cedrickring/golang-action@1.7.0"
@@ -46,7 +46,7 @@ jobs:
     - name: Check security issues with gosec
       uses: "cedrickring/golang-action@1.7.0"
       with:
-        args: go get -u github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
+        args: go install github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
 
   build:
     name: Build wg-ui
