--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -30,19 +30,19 @@ jobs:
         check-latest: true
 
     - name: Check styling error
-      run: go install golang.org/x/lint/golint; golint -set_exit_status main.go server.go config.go
+      run: go install golang.org/x/lint/golint@latest; golint -set_exit_status main.go server.go config.go
 
     - name: Check missing error check
-      run: go install github.com/kisielk/errcheck; errcheck ./...
+      run: go install github.com/kisielk/errcheck@latest; errcheck ./...
 
     - name: Check suspicious constructs (1)
-      run: go install honnef.co/go/tools/cmd/staticcheck; staticcheck -checks all,-ST1003,-U1000,-ST1005,-SA9002 ./... # have to disable ST1003,U1000,ST1005 due to the generated code
+      run: go install honnef.co/go/tools/cmd/staticcheck@latest; staticcheck -checks all,-ST1003,-U1000,-ST1005,-SA9002 ./... # have to disable ST1003,U1000,ST1005 due to the generated code
 
     - name: Check suspicious constructs (2)
       run: go vet ./...
 
     - name: Check security issues with gosec
-      run: go install github.com/securego/gosec/cmd/gosec; gosec ./... # https://github.com/securego/gosec
+      run: go install github.com/securego/gosec/cmd/gosec@latest; gosec ./... # https://github.com/securego/gosec
 
 #    - name: Check styling error
 #      uses: "cedrickring/golang-action@1.7.0"
