--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,7 +16,8 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: 14
+        node-version: '14'
+        check-latest: true
 
     - name: npm install and build
       run: |
@@ -51,7 +52,8 @@ jobs:
     - name: Setup NodeJS
       uses: actions/setup-node@v2
       with:
-        node-verison: 12
+        node-verison: '14'
+        check-latest: true
 
     - name: Setup Go
       uses: actions/setup-go@v2
