--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -66,6 +66,8 @@ jobs:
 
     - name: Check files
       run: ls -lah
+
+    - name: more files
       run: ls -lah */*
 
 #    - name: Build binary
