--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -70,6 +70,12 @@ jobs:
     - name: more files
       run: ls -lah */*
 
+    - name: node version
+      run: node --version
+
+    - name: go version
+      run: go version
+
 #    - name: Build binary
 #      run: |
 #        export PATH=$PATH:$(go env GOPATH)/bin
