--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -17,7 +17,6 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14'
-        check-latest: true
 
     - name: npm install and build
       run: |
@@ -28,7 +27,6 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.17'
-        check-latest: true
 
     - name: Check styling error
       run: go install golang.org/x/lint/golint@latest; golint -set_exit_status main.go server.go config.go
@@ -49,20 +47,18 @@ jobs:
     name: Build wg-ui
     runs-on: ubuntu-latest
     steps:
-    - name: Setup NodeJS
-      uses: actions/setup-node@v2
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
       with:
         node-verison: '14'
-        check-latest: true
-
-    - name: Setup Go
-      uses: actions/setup-go@v2
+    - uses: actions/setup-go@v2
       with:
         go-version: '1.17'
-        check-latest: true
 
-    - name: Checkout
-      uses: actions/checkout@v2
+#    - name: npm install and build
+#      run: |
+#        npm install --prefix ui
+#        npm run --prefix ui build
 
     - name: Check files
       run: ls -lah
