--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,7 +16,8 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version-file: '.nvmrc'
+#        node-version: '14.x'
 
     - name: npm install and build
       run: |
@@ -50,7 +51,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-verison: '14.x'
+#        node-verison: '14.19'
+        node-version-file: '.nvmrc'
     - uses: actions/setup-go@v2
       with:
         go-version: '1.17'
