--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -16,8 +16,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version-file: '.nvmrc'
-#        node-version: '14.x'
+        node-version: '14'
 
     - name: npm install and build
       run: |
@@ -51,8 +50,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-#        node-verison: '14.19'
-        node-version-file: '.nvmrc'
+        node-version: '14'
     - uses: actions/setup-go@v2
       with:
         go-version: '1.17'
