--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -12,21 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-
-    - name: Use Node.js
-      uses: actions/setup-node@v2
+    - uses: actions/setup-node@v2
       with:
         node-version: '14'
+    - uses: actions/setup-go@v2
+      with:
+        go-version: '1.17'
 
     - name: npm install and build
       run: |
         npm install --prefix ui
         npm run --prefix ui build
-
-    - name: Setup Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: '1.17'
 
     - name: Check styling error
       run: go install golang.org/x/lint/golint@latest; golint -set_exit_status main.go server.go config.go
@@ -55,11 +51,6 @@ jobs:
       with:
         go-version: '1.17'
 
-#    - name: npm install and build
-#      run: |
-#        npm install --prefix ui
-#        npm run --prefix ui build
-
     - name: Build binary
       run: make build
 
@@ -75,13 +66,8 @@ jobs:
     - name: go version
       run: go version
 
-#    - name: Build binary
-#      run: |
-#        export PATH=$PATH:$(go env GOPATH)/bin
-#        make build
+    - name: Check binary
+      run: file bin/wireguard-ui
 
-#    - name: Check binary
-#      run: file bin/wireguard-ui
-
-#    - name: Cleanup
-#      run: rm -rf bin/
+    - name: Cleanup
+      run: rm -rf bin/
